# Copyright (c) 2019 Adam Karpierz
# SPDX-License-Identifier: MIT

[build-system]
requires = ['setuptools>=81.0.0', 'packaging>=26.0.0']
build-backend = 'setuptools.build_meta'

[project]
name        = 'pyc_wheel'
version     = '2.2.0'
description = 'Compile all py files in a wheel to pyc files.'
authors = [
    { name  = 'Adam Karpierz', email = 'adam@karpierz.net' },
    { name  = 'Grant Patten', email = 'grant@gpatten.com' },
]
maintainers = [
    { name  = 'Adam Karpierz', email = 'adam@karpierz.net' },
]
license = 'MIT'
license-files = ['LICENSE']
urls.Homepage      = 'https://pypi.org/project/pyc-wheel/'
urls.Documentation = 'https://karpierz.github.io/pyc_wheel/'
urls.History       = 'https://karpierz.github.io/pyc_wheel/CHANGES.html'
urls.Download      = 'https://pypi.org/project/pyc-wheel/'
urls.Repository    = 'https://github.com/karpierz/pyc_wheel'
urls.Tracker       = 'https://github.com/karpierz/pyc_wheel/issues'
urls.Sponsoring    = 'https://www.paypal.com/donate/?hosted_button_id=FX8L7CJUGLW7S'
keywords = ['pyc_wheel', 'pycwheel', 'wheel', 'pyc', 'compile']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Natural Language :: Polish',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3.15',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
    'Typing :: Typed',
]
requires-python = '>=3.10.0,<4.0.0'
dependencies = [
    # mandatory
    'typing-extensions>=4.15.0',
    'pkg-about>=2.2.0',
    # others
]
dynamic = ['readme']
#scripts.'pyc_wheel' = 'pyc_wheel.__main__:main'
#gui-scripts.'pyc_wheel-gui' = 'pyc_wheel:main_gui'
#entry-points.'pyc_wheel.magical'.epoint = 'pyc_wheel:main_epoint'

[dependency-groups]
base = [
    'pip>=26.0.1',
    'setuptools>=81.0.0',
]
test = [
    { include-group = 'base' },
    'deepdiff>=8.6.1',
    'rich>=14.3.2',
]
coverage = [
    { include-group = 'test' },
    'coverage>=7.13.4',
    'covdefaults>=2.3.0',
    'diff-cover>=10.2.0',
]
docs = [
    { include-group = 'base' },
    'sphinx>=8.1.3',
    'pygments_ansi_color>=0.3.0', # fix sphinx load error
    'roman_numerals>=4.1.0',      #         -||-
    'sphinx-autodoc-typehints>=3.0.1',
    'sphinx-toolbox>=4.1.2',
    'sphinx-tabs>=3.4.5', # Do not change - sphinx-toolbox requires <3.4.7
    'sphinx-copybutton>=0.5.2',
    'sphinxcontrib-spelling>=8.0.2',
    'sphinx-lint>=1.0.2',
    'restructuredtext-lint>=2.0.2',
    'nbsphinx>=0.9.8',
]
build = [
    { include-group = 'test' },
    'check-manifest>=0.51',
    'build>=1.4.0',
    'twine>=6.2.0',
]
publish = [
    'twine>=6.2.0',
]
typing = [
    { include-group = 'base' },
    'mypy>=1.19.1',
    'mypy_extensions>=1.1.0',
    'types-setuptools>=81.0.0.20260209',
]
lint = [
    { include-group = 'test' },
    'flake8>=7.3.0',
    'flake8-in-file-ignores>=0.3.0',
    'flake8-pyproject>=1.2.4',
    'flake8-docstrings>=1.7.0',
    'pep8-naming>=0.15.1',
    'flake8-builtins>=3.1.0',
    'flake8-deprecated>=2.3.0',
]

[tool.setuptools.dynamic]
readme = { file = ['README.rst'], content-type = 'text/x-rst; charset=UTF-8' }

[tool.setuptools]
include-package-data = true
platforms = ['any']
zip-safe = true

[tool.setuptools.packages.find]
namespaces = false
where = ['src']

[tool.setuptools.package-dir]
'' = 'src'
#'pyc_wheel.tests' = 'tests'

[tool.setuptools.package-data]
pyc_wheel = [
]

[tool.setuptools.exclude-package-data]
'*' = ['*.c','*.h','*.cpp','*.hpp','*.cxx','*.hxx','*.pyx','*.pxd']
pyc_wheel = [
]

[tool.coverage]
# run
run.source = [
    'pyc_wheel',
    'tests',
]
run.omit = [
    '**/tests/tman_*.py',
]
run.branch = true
run.data_file = '.nox/coverage/.coverage'
run.plugins = ['covdefaults']
# report
report.exclude_also = [
    # Regexes
    # Have to re-enable the standard pragma
    '^\s*if\s+self\.debug\s*:',
    '^\s*if\s+__debug__\s*:',
    '^\s*if\s+(0|False)\s*:',
    '''if\s+__name__.*\s*==\s*['"]__main__['"]\s*:''',
    '^\s*@unittest\.skip\(',
    '^\s*@unittest\.skipIf\(sys\.platform\.startswith\("win"\)',
    '^\s*@unittest\.skipIf\(is_windows,',
    '^\s*@unittest\.skipIf\(is_cpython,',
    'if typing.TYPE_CHECKING:',
]
report.omit = [
    'tests/run.py',
]
report.skip_covered = false
# html report
html.directory = '.nox/coverage/.coverage.html'

[tool.flake8]
filename = ['*.py','*.pyx']
#include = ['tests']
#exclude = ['.nox','.tox','*.egg','.git','__pycache__','build','_build','docs/_build','dist']
exclude = ['_vendor']
max-line-length = 99
ignore = ['E126','E203','E221','E251','E302','E701','E702','E731',
          'E122','E127','E128','E222','E272','E241','E266','E226',
          'D100','D101','D102','D103','D104','D400','D401','D202',
          'N806','N802','N803','N801',
          'I100','W503']
# (e.g. 'E4','W') default: 'E121','E123','126','226','E24','704'
#select =
#select = ['E','W','F','N','I']
output-file = '.nox/lint/flake8out.txt'
count = true
#show-pep8,
#show-source
#verbose
#quiet

[tool.mypy]
python_version = '3.10'
strict = true
sqlite_cache = true
warn_unused_configs = true
exclude_gitignore = true
install_types = true
non_interactive = true
pretty = true
check_untyped_defs = true
#ignore_missing_imports = true
files = ['src']
#exclude = ['docs/', 'tests/']
